third_party/rust/thiserror/tests/ui/no-display.stderr
error[E0599]: no method named `as_display` found for type `&std::thread::Thread` in the current scope
 --> $DIR/no-display.rs:5:9
  |
5 | #[error("thread: {thread}")]
  |         ^^^^^^^^^^^^^^^^^^ method not found in `&std::thread::Thread`
  |
  = note: the method `as_display` exists but the following trait bounds were not satisfied:
          `&std::thread::Thread : thiserror::display::DisplayAsDisplay`
